macros/tests/ui/no_command_handlers.rs
use gprogram_framework_macros::{command_handlers, gprogram};

#[gprogram]
mod gprogram {
    use super::*;

    command_handlers!();
}

fn main() {}
